# swerve

./: .gitignore  CMakeLists.txt  README.md
include/swerve/lexer/: lex.h  lexer_error.h  lexer_result.h  token.h  token_queue.h  token_type.h
src/: main.c
src/swerve/lexer/: lex.c  token.c  token_queue.c  token_type.c
